Update PDF links to include zoom parameter for better readability

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <h3>Anti-Money Laundering Act Amendment Republic Act No. 9194</h3>
               <div class="pdf-embed-container">
                 <iframe
-                  src="public/data/RA9194.pdf"
+                  src="public/data/RA9194.pdf#zoom=100"
                   title="Anti-Money Laundering Act Amendment Republic Act No. 9194"
                   frameborder="0"
                   width="100%"
@@ -181,7 +181,7 @@
               </h3>
               <div class="pdf-embed-container">
                 <iframe
-                  src="public/data/10167.pdf"
+                  src="public/data/10167.pdf#zoom=100"
                   title="An Act to Further Strengthen the Anti-Money Laundering Act - Republic Act No. 10167"
                   frameborder="0"
                   width="100%"
@@ -196,7 +196,7 @@
               </h3>
               <div class="pdf-embed-container">
                 <iframe
-                  src="public/data/IRR 10167.pdf"
+                  src="public/data/IRR 10167.pdf#zoom=100"
                   title="Revised Implementing Rules and Regulations of Republic Act No. 9160"
                   frameborder="0"
                   width="100%"
