Add mobile PDF list and update display logic for responsive design

--- a/index.html
+++ b/index.html
@@ -156,6 +156,41 @@
       <div class="container">
         <h2 data-aos="fade-up">AML Resources</h2>
 
+        <!-- Mobile PDF List (Only visible on mobile) -->
+        <ul class="mobile-pdf-list" data-aos="fade-up" data-aos-delay="100">
+          <li>
+            <a href="public/data/RA9194.pdf" target="_blank" class="pdf-link">
+              <i class="fas fa-file-pdf pdf-icon"></i>
+              <span
+                >Anti-Money Laundering Act Amendment Republic Act No. 9194</span
+              >
+            </a>
+          </li>
+          <li>
+            <a href="public/data/10167.pdf" target="_blank" class="pdf-link">
+              <i class="fas fa-file-pdf pdf-icon"></i>
+              <span
+                >An Act to Further Strengthen the Anti-Money Laundering Act -
+                Republic Act No. 10167</span
+              >
+            </a>
+          </li>
+          <li>
+            <a
+              href="public/data/IRR 10167.pdf"
+              target="_blank"
+              class="pdf-link"
+            >
+              <i class="fas fa-file-pdf pdf-icon"></i>
+              <span
+                >Revised Implementing Rules and Regulations of Republic Act No.
+                9160</span
+              >
+            </a>
+          </li>
+        </ul>
+
+        <!-- Desktop PDF Carousel (Only visible on desktop) -->
         <div
           class="pdf-carousel-container"
           data-aos="fade-up"
