Update page title for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         anchorPlacement: "top-bottom",
       });
     </script>
-    <title>AML Expert System - Anti-Money Laundering Compliance</title>
+    <title>Anti-Money Laundering Expert System</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="public/assets/icon/favicon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
