Update styles and logo for improved navigation and readability

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -48,15 +48,16 @@
           alt="AML Logo"
           class="nav-icon"
         />
-        <span class="logo-full">Anti-Money Laundering Expert System</span>
-        <span class="logo-short">AML Expert System</span>
+        <span class="logo-left">Republic Act No. 9160</span>
+        <span class="logo-center">ANTI-MONEY LAUNDERING EXPERT SYSTEM</span>
+        <span class="logo-short">AML EXPERT SYSTEM</span>
       </div>
       <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#resources">Resources</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#team">Team</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#resources">RESOURCES</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#team">TEAM</a></li>
       </ul>
     </nav>
 
