Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           guidance.
         </p>
         <a
-          href="#services"
+          href="expert.html"
           class="cta-button"
           data-aos="fade-up"
           data-aos-delay="400"
@@ -153,11 +153,7 @@
             </a>
           </li>
           <li>
-            <a
-              href="public/data/IRR 10167.pdf"
-              target="_blank"
-              class="pdf-link"
-            >
+            <a href="public/data/RA9160.pdf" target="_blank" class="pdf-link">
               <i class="fas fa-file-pdf pdf-icon"></i>
               <span
                 >Revised Implementing Rules and Regulations of Republic Act No.
@@ -208,7 +204,7 @@
               </h3>
               <div class="pdf-embed-container">
                 <iframe
-                  src="public/data/IRR 10167.pdf#zoom=100"
+                  src="public/data/RA9160.pdf#zoom=100"
                   title="Revised Implementing Rules and Regulations of Republic Act No. 9160"
                   frameborder="0"
                   width="100%"
