--- a/expert.html
+++ b/expert.html
@@ -3,20 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RA 9160</title>
-    <!-- CSS from index -->
-    <link rel="stylesheet" href="/css/styles.css" />    <style>
-      body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        line-height: 1.6;
-        color: #333;
-        background-color: #f5f7fa;
-      }
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
-      }
+    <meta name="description" content="AML Expert System Assessment Tool" />
+    <title>Anti-Money Laundering Expert System - Assessment</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="public/assets/icon/favicon.png" type="image/png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+    <style>
       .hidden {
         display: none;
       }
@@ -25,7 +35,7 @@
         width: 100%;
         margin: 10px 0;
         padding: 12px 16px;
-        background-color: #4CAF50;
+        background-color: var(--accent-color);
         color: white;
         border: none;
         border-radius: 4px;
@@ -34,7 +44,7 @@
         transition: background-color 0.3s, transform 0.2s;
       }
       .options button:hover {
-        background-color: #45a049;
+        background-color: var(--dark-accent);
         transform: translateY(-2px);
       }
       .options button:active {
@@ -44,85 +54,128 @@
         font-size: 1.3rem;
         margin-bottom: 25px;
         font-weight: bold;
-        color: #2c3e50;
+        color: var(--primary-color);
       }
       .questionContainer {
         margin: 30px 0;
         padding: 25px;
-        border: 1px solid #ddd;
+        border: 1px solid var(--medium-gray);
         border-radius: 8px;
         background-color: white;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
       }
       .penaltyDetails {
         line-height: 1.8;
       }
-    </style></head>
+      #restart {
+        background-color: var(--accent-color);
+        color: white;
+        border: none;
+        padding: 12px 24px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: all 0.3s ease;
+      }
+      #restart:hover {
+        background-color: var(--dark-accent);
+        transform: translateY(-2px);
+      }
+      .expert-system-section {
+        min-height: calc(100vh - var(--nav-height));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem 0;
+      }
+
+      body {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      #footer-container {
+        margin-top: auto;
+      }
+
+      .container {
+        width: 100%;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 0 1rem;
+      }
+    </style>
+  </head>
   <body>
+    <!-- Navigation will be loaded here -->
+    <div id="navbar-container"></div>
 
-    <!-- <header class="hero">
-      <div class="container">
-        <dotlottie-player
-          src="https://lottie.host/24d0884f-bac1-45c4-9331-deaecb0af34c/c7lKfzvUcM.lottie"
-          background="transparent"
-          speed="1"
-          class="hero-lottie"
-          loop
-          autoplay
-          data-aos="zoom-in"
-        ></dotlottie-player>
-        <h1 data-aos="fade-up" data-aos-delay="200">
-          Anti-Money Laundering Expert System
-        </h1>
-        <p data-aos="fade-up" data-aos-delay="300">
-          Your trusted resource for understanding and complying with the
-          Anti-Money Laundering Act in the Philippines providing expert
-          guidance.
+    <section class="expert-system-section">
+      <div class="container" data-aos="fade-up">
+        <h1>Anti-Money Laundering Act Expert System</h1>
+        <p class="section-description">
+          This expert system helps determine applicability of RA 9160
+          (Anti-Money Laundering Act) and its amendments based on your specific
+          situation.
         </p>
-        <a
-          href="#services"
-          class="cta-button"
-          data-aos="fade-up"
-          data-aos-delay="400"
-          >Get Started</a
-        >
-      </div>
-    </header> -->    <div class="container">
-      <h1 style="text-align: center; margin-top: 30px; color: #333;">Anti-Money Laundering Act Expert System</h1>
-      <p style="text-align: center; margin-bottom: 30px; color: #666;">This expert system helps determine applicability of RA 9160 (Anti-Money Laundering Act) and its amendments based on your specific situation.</p>
-      
-      <div style="background-color: #e7f3fe; border-left: 4px solid #2196F3; padding: 15px; margin-bottom: 20px; border-radius: 4px;">
-        <p style="margin: 0"><strong>Disclaimer:</strong> This tool provides general guidance only and is not a substitute for professional legal advice. The assessment is based on the information you provide and should not be considered as definitive legal determination.</p>
-      </div>
-      
-      <div id="questionContainer" class="questionContainer">
-        <div id="question" class="question"></div>
-        <div id="options" class="options"></div>
-      </div>      <div id="result" class="result hidden">
-        <h2 style="color: #2c3e50; margin-bottom: 15px;">Assessment Result</h2>
-        <div id="penaltyDetails" class="penaltyDetails" style="background-color: #f8f9fa; padding: 15px; border-radius: 5px; margin-bottom: 20px; border-left: 4px solid #4CAF50;"></div>
-        <button id="restart" class="hidden" onclick="restartSystem()" style="background-color: #3498db; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer;">
-          Start Over
-        </button>
-      </div>
-    </div>
 
-    <!-- <footer>
-      <div class="footer-content" data-aos="fade-up">
-        <div class="footer-links">
-          <a href="#about">About</a>
-          <a href="#services">Services</a>
-          <a href="#resources">Resources</a>
-          <a href="#contact">Contact</a>
-          <a href="#team">Team</a>
+        <div class="disclaimer-box" data-aos="fade-up" data-aos-delay="100">
+          <p>
+            <strong>Disclaimer:</strong> This tool provides general guidance
+            only and is not a substitute for professional legal advice. The
+            assessment is based on the information you provide and should not be
+            considered as definitive legal determination.
+          </p>
         </div>
-        <p>
-          An unofficial expert system for Anti-Money Laundering in compliance
-          for CS Elective 3 - Artificial Intelligence.
-        </p>
-        <br />
-        <p>&copy; 2025 AML Expert System. All rights reserved.</p>      </div>
-    </footer> -->
+
+        <div
+          id="questionContainer"
+          class="questionContainer"
+          data-aos="fade-up"
+          data-aos-delay="200"
+        >
+          <div id="question" class="question"></div>
+          <div id="options" class="options"></div>
+        </div>
+
+        <div id="result" class="result hidden" data-aos="fade-up">
+          <h2>Assessment Result</h2>
+          <div id="penaltyDetails" class="penaltyDetails"></div>
+          <button id="restart" class="hidden" onclick="restartSystem()">
+            Start Over
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer will be loaded here -->
+    <div id="footer-container"></div>
+
+    <!-- Load JavaScript -->
+    <script src="js/components.js"></script>
     <script src="expert-script.js"></script>
+    <script src="js/script.js"></script>
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      // Initialize AOS and load components after the DOM is fully loaded
+      document.addEventListener("DOMContentLoaded", function () {
+        // Load components first
+        loadComponents().then(() => {
+          // Initialize AOS after components are loaded
+          AOS.init({
+            duration: 800,
+            easing: "ease-in-out",
+            once: false,
+            mirror: false,
+            offset: 100,
+            delay: 100,
+            anchorPlacement: "top-bottom",
+          });
+        });
+      });
+    </script>
   </body>
 </html>
