refactor: Update descriptions and terminology for AML Expert System
- Changed "AML Expert System" to "AMLA Expert System" in meta descriptions and headings for consistency.
- Enhanced button styles and hover effects for improved user experience.
- Introduced a custom navbar for the expert system page with an info button and drawer for important information.
- Added AOS animations to the info drawer content for better visibility.
- Updated various sections to clarify the distinction between AML and AMLA, ensuring accurate representation of the Anti-Money Laundering Act.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AML Expert System - Your trusted resource
-    for understanding and complyin
+    <meta
+      name="description"
+      content="AMLA Expert System - Your trusted resource
+    for understanding and complying with the Anti-Money Laundering Act in the Philippines."
+    />
     <script src="js/script.js"></script>
     <!-- AOS JS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -79,14 +82,14 @@
 
     <section id="about">
       <div class="container">
-        <h2 data-aos="fade-up">About the AML Expert System</h2>
+        <h2 data-aos="fade-up">About the AMA Expert System</h2>
         <p data-aos="fade-up" data-aos-delay="100">
-          This Anti-Money Laundering (AML) Expert System is a conceptual project
-          developed for academic and compliance-related research purposes. It is
-          not an official tool or service.
+          This Anti-Money Laundering Act (AMLA) Expert System is a conceptual
+          project developed for academic and compliance-related research
+          purposes. It is not an official tool or service.
         </p>
         <p data-aos="fade-up" data-aos-delay="200">
-          The system is designed to simulate approach to AML compliance under
+          The system is designed to simulate approach to AMLA compliance under
           the Philippine Anti-Money Laundering Act, providing illustrative
           guidance and example-based insights only.
         </p>
@@ -106,15 +109,15 @@
             <i class="fas fa-briefcase"></i>
             <h3>Expert Consultation</h3>
             <p>
-              Personalized advisory services on AML compliance, risk assessment,
-              and implementation strategies.
+              Personalized advisory services on AMLA compliance, risk
+              assessment, and implementation strategies.
             </p>
           </div>
           <div class="service-item" data-aos="fade-up" data-aos-delay="200">
             <i class="fas fa-clipboard-check"></i>
             <h3>Compliance Audits</h3>
             <p>
-              Thorough assessment of your AML controls, procedures, and
+              Thorough assessment of your AMLA controls, procedures, and
               documentation to ensure regulatory compliance.
             </p>
           </div>
@@ -122,7 +125,7 @@
             <i class="fas fa-file-alt"></i>
             <h3>Policy Development</h3>
             <p>
-              Development and review of AML policies, procedures, and
+              Development and review of AMLA policies, procedures, and
               frameworks.
             </p>
           </div>
@@ -132,7 +135,7 @@
 
     <section id="resources">
       <div class="container">
-        <h2 data-aos="fade-up">AML Resources</h2>
+        <h2 data-aos="fade-up">AMLA Resources</h2>
         <!-- Mobile PDF List (Only visible on mobile) -->
         <ul class="mobile-pdf-list" data-aos="fade-up" data-aos-delay="100">
           <li>
@@ -281,7 +284,7 @@
             <h3>Johann Nikkolai Cepeda</h3>
             <p class="member-role">Data Visualization Specialist</p>
             <p class="member-bio">
-              Creates intuitive visual representations of complex AML data to
+              Creates intuitive visual representations of complex AMLA data to
               help organizations understand and interpret regulatory
               requirements and compliance patterns.
             </p>
@@ -302,7 +305,7 @@
             <p class="member-bio">
               Develops robust server-side solutions that power our expert
               system, ensuring secure data handling and efficient processing of
-              AML regulatory information.
+              AMLA regulatory information.
             </p>
           </div>
 
@@ -310,7 +313,7 @@
             <h3>Leenel Ioan Santos</h3>
             <p class="member-role">Data Analyst</p>
             <p class="member-bio">
-              Specializes in analyzing complex AML data sets to identify
+              Specializes in analyzing complex AMLA data sets to identify
               patterns and insights.
             </p>
           </div>
