--- a/expert.html
+++ b/expert.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AML Expert System Assessment Tool" />
+    <meta name="description" content="AMLA Expert System Assessment Tool" />
     <title>Anti-Money Laundering Expert System - Assessment</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="public/assets/icon/favicon.png" type="image/png" />
@@ -31,7 +31,7 @@
         display: none;
       }
       .options button {
-        display: block;
+        display: flex;
         width: 100%;
         margin: 10px 0;
         padding: 12px 16px;
@@ -42,6 +42,8 @@
         cursor: pointer;
         font-size: 16px;
         transition: background-color 0.3s, transform 0.2s;
+        justify-content: center;
+        align-items: center;
       }
       .options button:hover {
         background-color: var(--dark-accent);
@@ -66,23 +68,121 @@
       }
       .penaltyDetails {
         line-height: 1.8;
+        background: linear-gradient(145deg, #f1f5f9, #e8f4fd);
+        border: 1px solid rgba(32, 84, 147, 0.2);
+        padding: 2rem;
+        border-radius: 10px;
+        margin-bottom: 2rem;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+        font-size: 1.05rem;
+        position: relative;
+        color: var(--primary-color);
+        overflow: hidden;
+        transition: all 0.3s ease;
+      }
+
+      /* Risk-based color variants with stronger tones */
+      .penaltyDetails.high-risk {
+        background: #ffebeb;
+        border-color: #ff4d4f;
+        color: #820014;
+        box-shadow: 0 5px 15px rgba(255, 77, 79, 0.15);
+      }
+
+      .penaltyDetails.medium-risk {
+        background: #fffbe6;
+        border-color: #faad14;
+        color: #874d00;
+        box-shadow: 0 5px 15px rgba(250, 173, 20, 0.15);
+      }
+
+      .penaltyDetails.low-risk {
+        background: #e6f7e6;
+        border-color: #52c41a;
+        color: #135200;
+        box-shadow: 0 5px 15px rgba(82, 196, 26, 0.15);
+      }
+      .penaltyDetails .result-title {
+        color: inherit;
+        margin-top: 0;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+        border-bottom: 1px solid currentColor;
+        padding-bottom: 0.5rem;
+        opacity: 0.9;
+        font-weight: 700;
+      }
+
+      .penaltyDetails .result-text {
+        color: inherit;
+        margin-bottom: 0;
+        line-height: 1.7;
+      }
+
+      .penaltyDetails .result-meta {
+        margin-bottom: 10px;
+        font-size: 0.9rem;
+        opacity: 0.8;
+        color: inherit;
+        font-weight: 500;
+      }
+
+      /* Risk indicator badge */
+      .penaltyDetails::after {
+        content: "✓ Low Risk";
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        padding: 0.35rem 0.8rem;
+        border-radius: 50px;
+        font-size: 0.8rem;
+        font-weight: 700;
+        background-color: #52c41a;
+        color: white;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      }
+
+      .penaltyDetails.medium-risk::after {
+        content: "⚠ Medium Risk";
+        background-color: #faad14;
+      }
+
+      .penaltyDetails.high-risk::after {
+        content: "! High Risk";
+        background-color: #ff4d4f;
       }
       #restart {
         background-color: var(--accent-color);
         color: white;
         border: none;
-        padding: 12px 24px;
+        padding: 15px 30px;
         border-radius: 4px;
         cursor: pointer;
         font-size: 16px;
+        font-weight: 600;
         transition: all 0.3s ease;
+        display: block;
+        margin: 2rem auto;
+        min-width: 220px;
+        box-shadow: 0 4px 10px rgba(2, 191, 231, 0.3);
+        position: relative;
+        overflow: hidden;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
       }
+
       #restart:hover {
         background-color: var(--dark-accent);
-        transform: translateY(-2px);
+        transform: translateY(-3px);
+        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      #restart:active {
+        transform: translateY(-1px);
       }
       .expert-system-section {
         min-height: calc(100vh - var(--nav-height));
+        min-width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -106,30 +206,433 @@
         margin: 0 auto;
         padding: 0 1rem;
       }
+
+      .options button small {
+        display: block;
+        font-weight: normal;
+        margin-top: 5px;
+        opacity: 0.8;
+        font-size: 0.85rem;
+      }
+
+      #entitySelectionContainer {
+        margin-bottom: 2rem;
+      }
+
+      #entitySelectionContainer .question {
+        margin-bottom: 1.5rem;
+        text-align: center;
+        font-size: 1.5rem;
+      }
+
+      #entitySelectionContainer .options button {
+        margin-bottom: 1rem;
+        padding: 1.2rem 1.5rem;
+        background-color: var(--primary-color);
+      }
+
+      #entitySelectionContainer .options button:hover {
+        background-color: var(--secondary-color);
+      }
+      .entity-description {
+        max-width: 600px;
+        margin: 0 auto 2rem;
+        text-align: center;
+        line-height: 1.6;
+        font-family: "Red Hat Display", sans-serif;
+      }
+      .entity-card {
+        border: 1px solid var(--light-gray);
+        border-radius: 8px;
+        padding: 1.5rem;
+        margin-bottom: 1.5rem;
+        transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
+        cursor: pointer;
+        background-color: var(--primary-color);
+        text-align: left;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        color: white;
+      }
+
+      .entity-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        border-color: var(--accent-color);
+        background-color: var(--secondary-color);
+      }
+      .entity-icon {
+        font-size: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        margin-right: 20px;
+        min-width: 50px;
+      }
+
+      .entity-icon i {
+        font-size: 2rem;
+      }
+      .entity-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex: 1;
+      }
+
+      .entity-card h3 {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+        color: white;
+        font-size: 1.2rem;
+      }
+      .entity-card p {
+        margin-bottom: 0;
+        color: rgba(255, 255, 255, 0.9);
+        font-size: 0.9rem;
+        line-height: 1.5;
+        font-family: "Red Hat Display", sans-serif;
+      }
+
+      .entity-section-header {
+        margin: 2rem 0 1rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid var(--light-gray);
+        color: var(--secondary-color);
+        font-size: 1.3rem;
+      }
+
+      .info-box {
+        background-color: #e6f7ff;
+        border-color: #91d5ff;
+      }
+
+      .question-meta {
+        margin-bottom: 5px;
+        font-size: 0.9rem;
+        color: #666;
+      }
+      .result-meta {
+        margin-bottom: 10px;
+        font-size: 0.9rem;
+        color: #666;
+      }
+
+      .result-title {
+        color: var(--primary-color);
+        margin-top: 0;
+        font-size: 1.8rem;
+        margin-bottom: 0.5rem;
+        border-bottom: 2px solid var(--light-gray);
+        padding-bottom: 0.5rem;
+      }
+
+      .result {
+        background-color: white;
+        border-radius: 8px;
+        padding: 2rem;
+        box-shadow: 0 2px 20px rgba(0, 0, 0, 0.08);
+        transition: all 0.3s ease;
+        margin-bottom: 2rem;
+      }
+
+      .result-text {
+        margin-bottom: 15px;
+      }
+
+      .entity-header-title {
+        margin-top: 0;
+      }
+      .entity-header-description {
+        font-weight: normal;
+        font-size: 1rem;
+        margin-bottom: 1.5rem;
+        font-family: "Red Hat Display", sans-serif;
+      }
+
+      /* Info Button and Drawer Styles */
+      .info-button {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1.5rem;
+        cursor: pointer;
+        margin-right: 1.5rem;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .info-button:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+        transform: scale(0);
+        transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+      }
+
+      .info-button:hover:after {
+        transform: scale(1);
+      }
+
+      .info-button:hover {
+        color: var(--accent-color);
+        transform: scale(1.1);
+      }
+
+      .info-drawer-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1990;
+        opacity: 1;
+        transition: opacity 0.3s ease;
+      }
+
+      .info-drawer-overlay.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .info-drawer {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 350px;
+        max-width: 100%;
+        height: 100%;
+        background-color: white;
+        box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
+        z-index: 2000;
+        transform: translateX(0);
+        transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+        overflow-y: auto;
+      }
+
+      .info-drawer.hidden {
+        transform: translateX(100%);
+      }
+
+      .info-drawer-header {
+        padding: 1rem;
+        background-color: var(--primary-color);
+        color: white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .info-drawer-header h2 {
+        margin: 0;
+        font-size: 1.5rem;
+        color: white;
+      }
+
+      .close-drawer-button {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1.25rem;
+        cursor: pointer;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+      }
+
+      .close-drawer-button:hover {
+        transform: scale(1.1);
+        color: var(--accent-color);
+      }
+
+      .info-drawer-content {
+        padding: 1.5rem;
+      }
+
+      .info-drawer-content .disclaimer-box {
+        transform: translateX(40px);
+        opacity: 0;
+        transition: transform 0.5s ease, opacity 0.5s ease;
+      }
+
+      .info-drawer-content .disclaimer-box.aos-animate {
+        transform: translateX(0);
+        opacity: 1;
+      }
+
+      .disclaimer-box {
+        padding: 1.2rem;
+        margin-bottom: 1.5rem;
+        border-radius: 6px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        border-left: 4px solid var(--accent-color);
+      }
+
+      .disclaimer-box p {
+        margin: 0;
+        line-height: 1.6;
+      }
+
+      .note-box {
+        background-color: #fff9e6;
+        border-color: #ffe58f;
+      }
+
+      body.drawer-open {
+        overflow: hidden;
+      }
+
+      .navbar-flex {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+      }
+
+      .info-hint {
+        display: inline-block;
+        color: var(--accent-color);
+        font-size: 0.9rem;
+        margin-left: 5px;
+      }
+
+      /* Speaking icon styles */
+      .speaking-icon {
+        width: 60px;
+        height: 60px;
+        margin: 0 auto 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+      }
+
+      .speaking-icon i {
+        font-size: 2.5rem;
+        color: var(--accent-color);
+      }
+
+      .speaking-wave {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 50%;
+        border: 2px solid var(--accent-color);
+        opacity: 0;
+        animation: wave-animation 1.5s infinite;
+      }
+
+      .speaking-wave:nth-child(2) {
+        animation-delay: 0.5s;
+      }
+
+      .speaking-wave:nth-child(3) {
+        animation-delay: 1s;
+      }
+
+      @keyframes wave-animation {
+        0% {
+          transform: scale(0.5);
+          opacity: 1;
+        }
+        100% {
+          transform: scale(1.5);
+          opacity: 0;
+        }
+      }
+
+      .options-container {
+        transition: opacity 0.3s ease;
+      }
+
+      .options-container.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .options-container.visible {
+        opacity: 1;
+        pointer-events: auto;
+      }
+
+      /* Speaking icon with hover effects */
+      .speaking-icon {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 20px auto;
+        padding: 15px;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        background-color: rgba(2, 191, 231, 0.1);
+        transition: all 0.3s ease;
+        cursor: pointer;
+      }
+
+      .speaking-icon::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: var(--accent-color);
+        font-weight: 600;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        z-index: 2;
+      }
+
+      .speaking-icon:hover::before {
+        opacity: 1;
+      }
+
+      .speaking-icon:hover .speaking-wave {
+        opacity: 0.3;
+      }
+
+      .speaking-icon:hover .bi-mic-fill {
+        opacity: 0;
+      }
+
+      .speaking-icon:hover::after {
+        content: "\F659"; /* Bootstrap icons code for skip-forward */
+        font-family: bootstrap-icons;
+        position: absolute;
+        font-size: 1.8em;
+        color: var(--accent-color);
+        opacity: 1;
+      }
+
+      .speaking-icon:active {
+        transform: scale(0.95);
+      }
     </style>
   </head>
   <body>
     <!-- Navigation will be loaded here -->
     <div id="navbar-container"></div>
-
     <section class="expert-system-section">
       <div class="container" data-aos="fade-up">
-        <h1>Anti-Money Laundering Act Expert System</h1>
-        <p class="section-description">
-          This expert system helps determine applicability of RA 9160
-          (Anti-Money Laundering Act) and its amendments based on your specific
-          situation.
-        </p>
-
-        <div class="disclaimer-box" data-aos="fade-up" data-aos-delay="100">
-          <p>
-            <strong>Disclaimer:</strong> This tool provides general guidance
-            only and is not a substitute for professional legal advice. The
-            assessment is based on the information you provide and should not be
-            considered as definitive legal determination.
-          </p>
-        </div>
-
         <div
           id="questionContainer"
           class="questionContainer"
@@ -139,17 +642,16 @@
           <div id="question" class="question"></div>
           <div id="options" class="options"></div>
         </div>
-
         <div id="result" class="result hidden" data-aos="fade-up">
-          <h2>Assessment Result</h2>
+          <h2 class="result-title">Assessment Result</h2>
           <div id="penaltyDetails" class="penaltyDetails"></div>
-          <button id="restart" class="hidden" onclick="restartSystem()">
-            Start Over
+          <button id="restart" onclick="restartSystem()">
+            <i class="fas fa-redo-alt"></i> Start Over
           </button>
         </div>
       </div>
     </section>
-
+    >
     <!-- Footer will be loaded here -->
     <div id="footer-container"></div>
 
