fix: Remove text from 'Start Over' button for cleaner UI

--- a/expert.html
+++ b/expert.html
@@ -646,7 +646,7 @@
           <h2 class="result-title">Assessment Result</h2>
           <div id="penaltyDetails" class="penaltyDetails"></div>
           <button id="restart" onclick="restartSystem()">
-            <i class="fas fa-redo-alt"></i> Start Over
+            <i class="fas fa-redo-alt"></i>
           </button>
         </div>
       </div>
