--- a/expert.html
+++ b/expert.html
@@ -72,7 +72,8 @@
         border: 1px solid rgba(32, 84, 147, 0.2);
         padding: 2rem;
         border-radius: 10px;
-        margin-bottom: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
         box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
         font-size: 1.05rem;
         position: relative;
