--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2 data-aos="fade-up">Our Services</h2>
         <div class="service-grid">
           <div class="service-item" data-aos="fade-up" data-aos-delay="100">
-            <i class="fas fa-briefcase"></i>
+            <i class="bi bi-briefcase"></i>
             <h3>Expert Consultation</h3>
             <p>
               Personalized advisory services on AMLA compliance, risk
@@ -114,7 +114,7 @@
             </p>
           </div>
           <div class="service-item" data-aos="fade-up" data-aos-delay="200">
-            <i class="fas fa-clipboard-check"></i>
+            <i class="bi bi-clipboard-check"></i>
             <h3>Compliance Audits</h3>
             <p>
               Thorough assessment of your AMLA controls, procedures, and
@@ -122,7 +122,7 @@
             </p>
           </div>
           <div class="service-item" data-aos="fade-up" data-aos-delay="300">
-            <i class="fas fa-file-alt"></i>
+            <i class="bi bi-file-earmark-text"></i>
             <h3>Policy Development</h3>
             <p>
               Development and review of AMLA policies, procedures, and
