fix: Update footer links to include index.html for correct navigation; add localStorage state management in expert-script.js; refine risk indicator text in expert.html

--- a/expert.html
+++ b/expert.html
@@ -130,7 +130,7 @@
 
       /* Risk indicator badge */
       .penaltyDetails::after {
-        content: "✓ Low Risk";
+        content: "Low Risk";
         position: absolute;
         top: 1rem;
         right: 1rem;
@@ -144,12 +144,12 @@
       }
 
       .penaltyDetails.medium-risk::after {
-        content: "⚠ Medium Risk";
+        content: "Medium Risk";
         background-color: #faad14;
       }
 
       .penaltyDetails.high-risk::after {
-        content: "! High Risk";
+        content: "High Risk";
         background-color: #ff4d4f;
       }
       #restart {
