fix: Prevent horizontal overflow by adding overflow-x: hidden to body

--- a/expert.html
+++ b/expert.html
@@ -195,6 +195,7 @@
         min-height: 100vh;
         display: flex;
         flex-direction: column;
+        overflow-x: hidden;
       }
 
       #footer-container {
@@ -652,7 +653,7 @@
         </div>
       </div>
     </section>
-    >
+
     <!-- Footer will be loaded here -->
     <div id="footer-container"></div>
 
