--- a/expert.html
+++ b/expert.html
@@ -629,7 +629,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="expert-page">
     <!-- Navigation will be loaded here -->
     <div id="navbar-container"></div>
     <section class="expert-system-section">
